--- a/src/components/CartDetail/CartDetail.css
+++ b/src/components/CartDetail/CartDetail.css
@@ -3,3 +3,15 @@
     justify-content: flex-end;
     align-items: center;
 }
+
+.order-qty{
+    padding: 20px;
+    padding-top: 10px;
+}
+
+.pay-button {
+    border-radius: 15px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    background-color: beige;
+}
