--- a/src/components/FeaturedItems/FeaturedItems.css
+++ b/src/components/FeaturedItems/FeaturedItems.css
@@ -1,14 +1,34 @@
+.feature-container {
+    align-content: center;
+    margin-left: 500px;
+    border: solid 3px white;
+    border-radius: 40px;
+    width: 500px;
+    background-color: rgb(190, 245, 245);
+    opacity: 0.9;
+    color: black;
+    margin-bottom: 5px;
+}
+
 .img-containter {
     background: rgba(255, 255, 255, 0.2);
-    border-radius: 5px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: solid 10px rgba(26, 25, 25, 0.3);
 }
 
 
 .img-container .img {
+    flex-direction: column;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    border: solid 3px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
     height: 8vw;
     width: 8vw;
+}
+
+.name {
+    font-size: 20px;
+    font-weight: bold;
 }
