--- a/src/components/FeaturedItems/FeaturedItems.css
+++ b/src/components/FeaturedItems/FeaturedItems.css
@@ -32,3 +32,42 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+.add-to-cart {
+    background-color: #fff;
+    border: 0 solid #e2e8f0;
+    border-radius: 1.5rem;
+    box-sizing: border-box;
+    color: #0d172a;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.1rem;
+    font-weight: 600;
+    line-height: 1;
+    padding: 1rem 1.6rem;
+    text-align: center;
+    text-decoration: none #0d172a solid;
+    text-decoration-thickness: auto;
+    transition: all .1s cubic-bezier(.4, 0, .2, 1);
+    box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+  }
+  
+  .add-to-cart:hover {
+    background-color: #1e293b;
+    color: #fff;
+  }
+  
+  @media (min-width: 768px) {
+    .add-to-cart
+   {
+      font-size: 1.125rem;
+      padding: 1rem 2rem;
+    }
+  }
+  
